fix(friends): fit on mobile a bit better (still not perfect)

--- a/css/friends.css
+++ b/css/friends.css
@@ -64,6 +64,7 @@ html {
 	grid-column: 2 / 4;
 	grid-row-start: 1;
 	grid-row-end: 2;
+	z-index: 500;
 }
 
 #header p {
@@ -75,16 +76,14 @@ html {
 	grid-column-end: 3;
 	grid-row-start: 2;
 	grid-row-end: 3;
-	height: 90%;
+	height: 98%;
+	position: relative;
 }
 
 #board .personal-board {
 	position: absolute;
-	right: 50%;
-	height: 80%;
-	width: 50%;
-	bottom: -36%;
-	transform: translateY(-50%);
+	width: 100%;
+	height: 100%;
 	z-index: 100;
 }
 
@@ -112,8 +111,8 @@ html {
 	grid-row-end: 3;
 	display: grid;
 	grid-template-columns: 3rem auto 6rem;
-	height: 90%;
-	width: 100%;
+	height: 95%;
+	width: 99%;
 	justify-self: end;
 	margin-top: 1.2rem;
 	padding: 1rem 0 1rem 0;
@@ -127,6 +126,7 @@ html {
 	grid-column-end: 2;
 	width: 100%;
 	height: 100%;
+	padding-bottom: 1rem;
 }
 
 #friends #friend-book #tabs .friend-tab {
@@ -135,6 +135,10 @@ html {
 	width: 2rem;
 	float: right;
 	cursor: pointer;
+}
+
+#friends #friend-book #tabs .friend-tab:hover {
+	scale: 1.1 1;
 }
 
 #friends #friend-book #tabs .friend-tab:first-child {
@@ -153,31 +157,25 @@ html {
 	background-color: var(--bg-jared);
 }
 
-#friends #friend-book #tabs .friend-tab::before {
+#friends #friend-book #tabs .friend-tab::before,
+#friends #friend-book #tabs .friend-tab::after {
 	content: "";
 	position: absolute;
 	right: 0;
+	border-left: 2.2rem solid var(--binder-bg);
+	border-top: 1.2rem solid transparent;
+	border-bottom: 1.2rem solid transparent;
+	cursor: initial;
+}
+
+#friends #friend-book #tabs .friend-tab::before {
 	top: 0;
-	border-left: 2rem solid var(--binder-bg);
-	border-top: 1rem solid transparent;
-	border-bottom: 1rem solid transparent;
 	transform: translateY(-50%);
 }
 
-#friends #friend-book #tabs .friend-tab:after {
-	content: "";
-	position: absolute;
-	right: 0;
+#friends #friend-book #tabs .friend-tab::after {
 	bottom: 0;
-	border-left: 2rem solid var(--binder-bg);
-	border-top: 1rem solid transparent;
-	border-bottom: 1rem solid transparent;
 	transform: translateY(50%);
-}
-
-#friends #friend-book #tabs .friend-tab::before,
-#friends #friend-book #tabs .friend-tab:after {
-	cursor: initial;
 }
 
 #friends #friend-book #tabs .friend-tab span {
@@ -197,7 +195,7 @@ html {
 
 	display: none;
 	grid-template-columns: repeat(5, auto);
-	grid-template-rows: 12rem 12rem auto;
+	grid-template-rows: 12rem 7rem auto;
 	border-radius: .5rem 0rem 0rem .5rem;
 
 	width: 100%;
@@ -655,6 +653,34 @@ html {
 		font-size: 14px;
 	}
 
+	#friends {
+		grid-template-rows: 10rem 1fr 1fr;
+	}
+
+	#friends #board,
+	#friends #friend-book {
+		grid-column-start: 1;
+		grid-column-end: 5;
+	}
+
+	#friends #board {
+		grid-row-start: 2;
+		grid-row-end: 3;
+	}
+
+	#friends #friend-book {
+		grid-row-start: 3;
+		grid-row-end: 4;
+	}
+
+	.personal-board .scrap {
+		position: absolute;
+		right: 30%;
+		bottom: -150%;
+		transition: .3s linear;
+		transition-delay: 0s;
+		opacity: 0%;
+	}
 }
 
 @media (max-width: 920px) {
@@ -664,7 +690,7 @@ html {
 	}
 
 	#friends #friend-book {
-		max-width: 100%;
+		max-width: 99%;
 	}
 
 }
@@ -682,7 +708,7 @@ html {
 	}
 }
 
-@media (max-width: 360px) {
+@media (max-width: 330px) {
 	:root {
 		font-size: 9px;
 	}
